Chrash before even starting #84329

Closed
opened 2021-01-02 18:05:23 +01:00 by ArctoPsycho · 20 comments

System Information
Operating system: Windows 10 home
Graphics card: AMD radeon (TM) R5 Graphics

Blender Version
Broken: (example: 2.80, edbf15d3c0, master, 2018-11-28, as found on the splash screen)
Worked: (newest version of Blender that worked as expected)

Short description of error

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

Simple error or I don't know. I've downloaded the latest version of blender the version 2.91, I haven't got any issues downloading it and installing it but for some reason when I tried to start it up it crashed not even opened and it showed like for a split of second a screen with an Error I don't know which error I have only noticed the word error. I tried redownload it or restart the Pc, start it as a manager and nothing worked.

**System Information** Operating system: Windows 10 home Graphics card: AMD radeon (TM) R5 Graphics **Blender Version** Broken: (example: 2.80, edbf15d3c044, master, 2018-11-28, as found on the splash screen) Worked: (newest version of Blender that worked as expected) **Short description of error** **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Simple error or I don't know. I've downloaded the latest version of blender the version 2.91, I haven't got any issues downloading it and installing it but for some reason when I tried to start it up it crashed not even opened and it showed like for a split of second a screen with an Error I don't know which error I have only noticed the word error. I tried redownload it or restart the Pc, start it as a manager and nothing worked.
Author

Added subscriber: @ArctoidesPsyche

Added subscriber: @ArctoidesPsyche

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Please add the exact model of your R5 integrated graphics card (is it from the [200 series ]] or [ https:*en.wikipedia.org/wiki/List_of_AMD_graphics_processing_units#Radeon_R5/R7/R9_300_series | 300 series ) and follow the instructions below.

Open Blender's installation directory and double click on the blender_debug_gpu.cmd. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt (or simply type %TEMP% into the path bar of the Windows Explorer).

2019_12_04_upload_icon_developer_blender_org.png

Then try to start Blender by double-clicking on the blender_debug_gpu_glitchworkaround.cmd. Does Blender start?

This is most likely the issue that D9667 fixes for older/unsupported GPUs.

Please add the exact model of your R5 integrated graphics card (is it from the [200 series ]] or [[ https:*en.wikipedia.org/wiki/List_of_AMD_graphics_processing_units#Radeon_R5/R7/R9_300_series | 300 series ](https:*en.wikipedia.org/wiki/List_of_AMD_graphics_processing_units#Radeon_R5/R7/R9_200_series)) and follow the instructions below. Open Blender's installation directory and double click on the `blender_debug_gpu.cmd`. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in `C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt` (or simply type `%TEMP%` into the path bar of the Windows Explorer). ![2019_12_04_upload_icon_developer_blender_org.png](https://archive.blender.org/developer/F8190038/2019_12_04_upload_icon_developer_blender_org.png) Then try to start Blender by double-clicking on the `blender_debug_gpu_glitchworkaround.cmd`. Does Blender start? This is most likely the issue that [D9667](https://archive.blender.org/developer/D9667) fixes for older/unsupported GPUs.
Author

AMD Radeon R5 M230
the system is showing me that I have two graphic adapters one is the R5 the second one is AMD Radeon(TM) R8 M445DX{F9552901}

AMD Radeon R5 M230 the system is showing me that I have two graphic adapters one is the R5 the second one is AMD Radeon(TM) R8 M445DX{[F9552901](https://archive.blender.org/developer/F9552901/blender_debug_output.txt)}

In that case your GPU is supported as it is GCN first generation. Please perform the other steps so we can try identify the potential cause.

In that case your GPU is supported as it is GCN first generation. Please perform the other steps so we can try identify the potential cause.
Author

blender_system_info.txt yes it opened

[blender_system_info.txt](https://archive.blender.org/developer/F9552913/blender_system_info.txt) yes it opened

@ArctoidesPsyche I assume you mean that it starts when using the blender_debug_gpu_glitchworkaround.cmd?

@ArctoidesPsyche I assume you mean that it starts when using the `blender_debug_gpu_glitchworkaround.cmd`?
Author

yes exactly

yes exactly

@ArctoidesPsyche Please add the crash log from when you're using the blender_debug_gpu.cmd as instructed. We need this to verify that it's the same problem D9667 addresses.

@ArctoidesPsyche Please add the crash log from when you're using the `blender_debug_gpu.cmd` as instructed. We need this to verify that it's the same problem [D9667](https://archive.blender.org/developer/D9667) addresses.
Author
[blender_system_info.txt](https://archive.blender.org/developer/F9593144/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F9593143/blender_debug_output.txt)

@ArctoidesPsyche Thank you for the files, but I was referring to the .crash.txt file in the C:\Users\[your username]\AppData\Local\Temp\ directory. Currently it seems like the OpenGL issue others have been reporting together with the split kernel error from #84461.

@ArctoidesPsyche Thank you for the files, but I was referring to the `.crash.txt` file in the `C:\Users\[your username]\AppData\Local\Temp\` directory. Currently it seems like the OpenGL issue others have been reporting together with the split kernel error from #84461.
Author

oh I'm sorry for my misunderstandment and I'm sorry if my issue was already solved. I hope this one is the right one blender.crash.txt

oh I'm sorry for my misunderstandment and I'm sorry if my issue was already solved. I hope this one is the right one [blender.crash.txt](https://archive.blender.org/developer/F9594308/blender.crash.txt)

@ArctoidesPsyche No problem. This does appear to be the same issue addressed by the aforementioned patch. Could you please check if the (experimental) daily build of Blender 2.92 starts properly for you?

@ArctoidesPsyche No problem. This does appear to be the same issue addressed by the aforementioned patch. Could you please check if the (experimental) [daily build of Blender 2.92 ](https://builder.blender.org/download/) starts properly for you?
Author

No it doesn't. It started only when I used the blender_debug_gpu_glitchworkaround.cmd

No it doesn't. It started only when I used the blender_debug_gpu_glitchworkaround.cmd

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Added subscribers: @Jeroen-Bakker, @mano-wii

Added subscribers: @Jeroen-Bakker, @mano-wii

The problem is the same as D9667 addresses, but the driver version is different - 4.5.13467
I think we can add this driver version to the workaround list.

(Cc. @Jeroen-Bakker)

The problem is the same as [D9667](https://archive.blender.org/developer/D9667) addresses, but the driver version is different - `4.5.13467` I think we can add this driver version to the workaround list. (Cc. @Jeroen-Bakker)

This issue was referenced by 6f7e2bf170

This issue was referenced by 6f7e2bf170a1a8d72b51e772a7359cf18508d96a

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-01-27 14:58:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84329
No description provided.