Fix T84329: Crash when loading the blender with deprecated graphics driver

Add the driver `4.5.13467` related to `Radeon R5 Graphics` to the
workaround list.